--- a/index.html
+++ b/index.html
@@ -4,3 +4,8 @@
     <title> My Webpage! </title>
   </head>
 </html>
+<body>
+  <h1>Welcome to My Personal Page</h1>
+  <p>This is the beginning of my Github Pages website.</p>
+</body>
+</html>
