--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
   <h1>Welcome to My Personal Page</h1>
   <p>This is the beginning of my Github Pages website.</p>
-  <p>My name is Terrell Booker, I am from Philadelphia and I am a junior.</p>
+  <p>My name is Terrell Booker, I am from Philadelphia and I am a junior with a major in computer science.</p>
 </body>
 </html>
