--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en>
   <head>
-    <title> My Webpage! </title>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, intitial-scale=1.0">
+    <title>Terrell Booker's - Personal Webpage</title>
   </head>
 </html>
 <body>
   <h1>Welcome to My Personal Page</h1>
   <p>This is the beginning of my Github Pages website.</p>
-  <p>My name is Terrell Booker, I am from Philadelphia and I am a junior with a major in computer science.</p>
+  <p>My name is Terrell Booker, I am from Philadelphia and I am a junior attending Lincoln University of Pennsylvania, with a major in computer science.</p>
 </body>
 </html>
